# AxonEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  imgui.ini  vcpkg.json
AxonEngine/: App.cpp  App.h  CMakeLists.txt  Scene.cpp  Scene.h  Utils.h  main.cpp
AxonEngine/Component/: MaterialComponent.h  ModelComponent.h  TransformComponent.h
AxonEngine/Manager/: InputManager.cpp  InputManager.h  MaterialManager.cpp  MaterialManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
AxonEngine/Mesh/: IMeshGenerator.h  Material.h  StaticMesh.cpp  StaticMesh.h
AxonEngine/Mesh/Generator/: AssimpGenerator.cpp  AssimpGenerator.h  CubeGenerator.cpp  CubeGenerator.h  SphereGenerator.cpp  SphereGenerator.h  TorusGenerator.cpp  TorusGenerator.h
AxonEngine/OpenGL/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
AxonEngine/Shaders/: shader.frag  shader.vert
AxonEngine/Utils/: Camera.cpp  Camera.h
